# lung-scan

./: .env.example  .eslintrc.cjs  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: auth.py  deps.py
backend/app/api/v1/: __init__.py  analysis.py  feedback.py  reports.py  scans.py  upload.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/models/: __init__.py  feedback.py  report.py  scan.py  user.py
backend/app/schemas/: __init__.py  auth.py  feedback.py  report.py  scan.py
backend/app/services/: __init__.py  analysis_service.py  dicom_service.py  report_service.py
frontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: auth.js  client.js  index.js  reports.js  scans.js
frontend/src/components/auth/: AuthForm.jsx  LoginForm.jsx  RegisterForm.jsx
frontend/src/components/layout/: About.jsx  Footer.jsx  Header.jsx  Hero.jsx  PageLayout.jsx  index.js
frontend/src/components/profile/: HistoryControls.jsx  ProfileInfo.jsx  ProfilePage.jsx  StudyCard.jsx  StudyGrid.jsx  StudyPreview.jsx  index.js
frontend/src/components/ui/: Badge.jsx  Button.jsx  IconButton.jsx  Input.jsx  LoadingSpinner.jsx  Panel.jsx  TextArea.jsx  index.js
frontend/src/components/upload/: FileUploadZone.jsx  index.js  (+1 more)
frontend/src/constants/: colors.js  config.js  index.js  routes.js
frontend/src/hooks/: index.js  useAnalysis.js  useComments.js  useCornerstone.js  useDicomViewer.js  useFeedback.js  useFileUpload.js  useSliceNavigation.js
frontend/src/pages/: AuthPage.jsx
frontend/src/store/: authStore.js  index.js  scanStore.js  uiStore.js
frontend/src/utils/: index.js
(+21 files in other folders)
