[project]
name = "lung-scan-backend"
version = "1.0.0"
description = "Backend API for Lung Scan AI medical imaging service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.35",
    "pydicom>=2.4.4",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.3.0",
    "bcrypt>=5.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "ARG", "RUF", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false
suppress-dummy-args = false
allow-star-arg-any = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
